--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "@react-three/postprocessing": "^3.0.4",
-    "@react-three/rapier": "^2.1.0",
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3",
-    "three": "^0.173.0",
-    "wawa-vfx": "^1.0.8",
-    "zustand": "^5.0.3"
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
